--- a/drafts/admin_panel_dashboard.html
+++ b/drafts/admin_panel_dashboard.html
@@ -153,8 +153,12 @@
 	<!--  Checkbox, Radio & Switch Plugins -->
 	<script src="assets/js/bootstrap-checkbox-radio-switch.js"></script>
 
+    <!-- Angular Plugin -->
+    <script src="assets/js/angular.min.js"></script>
+
 	<!--  Charts Plugin -->
-	<script src="assets/js/chartist.min.js"></script>
+	<script src="assets/js/Chart.min.js"></script>
+    <script src="assets/js/angular-chart.min.js"></script>
 
     <!--  Notifications Plugin    -->
     <script src="assets/js/bootstrap-notify.js"></script>
