--- a/drafts/admin_panel_dashboard.html
+++ b/drafts/admin_panel_dashboard.html
@@ -10,9 +10,6 @@
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
-    <!-- Custom CSS -->
-    <link href="assets/css/admin_panel.css" rel="stylesheet" />
-
     <!-- Bootstrap core CSS     -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -22,6 +19,9 @@
     <!--  Light Bootstrap Table core CSS    -->
     <link href="assets/css/light-bootstrap-dashboard.css" rel="stylesheet"/>
 
+    <!-- Custom CSS -->
+    <link href="assets/css/admin_panel.css" rel="stylesheet" />
+
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-<div class="wrapper">
+<div class="wrapper" ng-app="myApp">
     <div class="sidebar" data-color="blue" data-image="assets/img/sidebar-5.jpg">
 
     <!--
@@ -112,17 +112,56 @@
             </div>
         </nav>
 
-
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div ng-app="myApp" ng-controller="PieCtrl">
-                        <canvas id="pie" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options"> </canvas> 
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Report Statistics</h4>
+                            </div>
+                            <div class="content" ng-controller="PieCtrl">
+                                <canvas id="pie" height="200" width="200" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options" chart-colors="colors" chart-options="options"> </canvas> 
+                              
+                                <div class="footer">
+                                    <div class="legend">
+                                        <i class="fa fa-circle text-info"></i> Open
+                                        <i class="fa fa-circle text-danger"></i> Bounce
+                                        <i class="fa fa-circle text-warning"></i> Unsubscribe
+                                    </div>
+                                    <hr>
+                                    <div class="stats">
+                                        <i class="fa fa-clock-o"></i> Report sent 2 days ago
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Users Behavior</h4>
+                            </div>
+                            <div class="content" ng-controller="PieCtrl">
+                                <canvas id="pie" height="200" width="200" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options" chart-colors="colors" chart-options="options"> </canvas>
+                                <div class="footer">
+                                    <div class="legend">
+                                        <i class="fa fa-circle text-info"></i> Open
+                                        <i class="fa fa-circle text-danger"></i> Click
+                                        <i class="fa fa-circle text-warning"></i> Click Second Time
+                                    </div>
+                                    <hr>
+                                    <div class="stats">
+                                        <i class="fa fa-history"></i> Updated 3 minutes ago
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
 
         <footer class="footer">
             <div class="container-fluid">
