--- a/drafts/admin_panel_dashboard.html
+++ b/drafts/admin_panel_dashboard.html
@@ -112,6 +112,7 @@
             </div>
         </nav>
 
+        <!-- Pie Chart -->
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
@@ -121,7 +122,8 @@
                                 <h4 class="title">Report Statistics</h4>
                             </div>
                             <div class="content" ng-controller="PieCtrl">
-                                <canvas id="pie" height="200" width="200" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options" chart-colors="colors" chart-options="options"> </canvas> 
+                                <canvas id="pie" height="150px" class="chart chart-pie" chart-data="pie_data" chart-labels="pie_labels" 
+                                chart-options="pie_options" chart-colors="pie_colors"> </canvas> 
                               
                                 <div class="footer">
                                     <div class="legend">
@@ -138,13 +140,16 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <!-- Bar Chart -->
+                    <div class="col-md-8">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Users Behavior</h4>
+                                <h4 class="title">Top Vulnerabilities</h4>
                             </div>
-                            <div class="content" ng-controller="PieCtrl">
-                                <canvas id="pie" height="200" width="200" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options" chart-colors="colors" chart-options="options"> </canvas>
+                            <div class="content" ng-controller="LineCtrl">
+                                <canvas id="line" height="71px" class="chart chart-line" chart-data="line_data" chart-labels="line_labels" chart-click="line_onClick"
+                                chart-colors="line_colors" chart-options="line_options" chart-series="line_series" chart-dataset-override="line_datasetOverride"> </canvas>
+
                                 <div class="footer">
                                     <div class="legend">
                                         <i class="fa fa-circle text-info"></i> Open
@@ -153,7 +158,7 @@
                                     </div>
                                     <hr>
                                     <div class="stats">
-                                        <i class="fa fa-history"></i> Updated 3 minutes ago
+                                        <i class="fa fa-history"></i> Updated 3 days ago
                                     </div>
                                 </div>
                             </div>
@@ -161,7 +166,78 @@
                     </div>
                 </div>
             </div>
+        
+
+            <!-- Table List -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">List of Reports</h4>
+                            </div>
+                            <div class="content table-responsive table-full-width">
+                                <table class="table table-hover">
+                                    <thead>
+                                        <th>ID</th>
+                                        <th>Name</th>
+                                        <th>Salary</th>
+                                        <th>Country</th>
+                                        <th>City</th>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Dakota Rice</td>
+                                            <td>$36,738</td>
+                                            <td>Niger</td>
+                                            <td>Oud-Turnhout</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>Minerva Hooper</td>
+                                            <td>$23,789</td>
+                                            <td>Curaçao</td>
+                                            <td>Sinaai-Waas</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>Sage Rodriguez</td>
+                                            <td>$56,142</td>
+                                            <td>Netherlands</td>
+                                            <td>Baileux</td>
+                                        </tr>
+                                        <tr>
+                                            <td>4</td>
+                                            <td>Philip Chaney</td>
+                                            <td>$38,735</td>
+                                            <td>Korea, South</td>
+                                            <td>Overland Park</td>
+                                        </tr>
+                                        <tr>
+                                            <td>5</td>
+                                            <td>Doris Greene</td>
+                                            <td>$63,542</td>
+                                            <td>Malawi</td>
+                                            <td>Feldkirchen in Kärnten</td>
+                                        </tr>
+                                        <tr>
+                                            <td>6</td>
+                                            <td>Mason Porter</td>
+                                            <td>$78,615</td>
+                                            <td>Chile</td>
+                                            <td>Gloucester</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
 
         <footer class="footer">
             <div class="container-fluid">
