--- a/drafts/admin_panel_dashboard.html
+++ b/drafts/admin_panel_dashboard.html
@@ -140,7 +140,7 @@
                         </div>
                     </div>
 
-                    <!-- Bar Chart -->
+                    <!-- Line Graph -->
                     <div class="col-md-8">
                         <div class="card">
                             <div class="header">
@@ -152,9 +152,7 @@
 
                                 <div class="footer">
                                     <div class="legend">
-                                        <i class="fa fa-circle text-info"></i> Open
-                                        <i class="fa fa-circle text-danger"></i> Click
-                                        <i class="fa fa-circle text-warning"></i> Click Second Time
+                                        <i class="fa fa-circle text-warning"></i> DDoS
                                     </div>
                                     <hr>
                                     <div class="stats">
@@ -177,7 +175,7 @@
                                 <h4 class="title">List of Reports</h4>
                             </div>
                             <div class="content table-responsive table-full-width">
-                                <table class="table table-hover">
+                                <table class="table table-hover" ng-controller="tListCtrl">
                                     <thead>
                                         <th>ID</th>
                                         <th>Name</th>
@@ -186,7 +184,15 @@
                                         <th>City</th>
                                     </thead>
                                     <tbody>
+                                        <tr ng-repeat="x in tList_records">
+                                            <td>{{x.id}}</td>
+                                            <td>{{x.name}}</td>
+                                            <td>{{x.salary}}</td>
+                                            <td>{{x.country}}</td>
+                                            <td>{{x.city}}</td>
+                                        </tr>
                                         <tr>
+                                            
                                             <td>1</td>
                                             <td>Dakota Rice</td>
                                             <td>$36,738</td>
