--- a/drafts/admin_panel_dashboard.html
+++ b/drafts/admin_panel_dashboard.html
@@ -31,7 +31,7 @@
 <body>
 
 <div class="wrapper" ng-app="myApp">
-    <div class="sidebar" data-color="blue" data-image="assets/img/sidebar-5.jpg">
+    <div class="sidebar" data-image="assets/img/sidebar-5.jpg">
 
     <!--
 
@@ -185,58 +185,19 @@
                                     </thead>
                                     <tbody>
                                         <tr ng-repeat="x in tList_records">
-                                            <td>{{x.id}}</td>
+                                            <td>{{$index + 1}}</td> 
                                             <td>{{x.name}}</td>
                                             <td>{{x.salary}}</td>
                                             <td>{{x.country}}</td>
                                             <td>{{x.city}}</td>
                                         </tr>
-                                        <tr>
-                                            
-                                            <td>1</td>
-                                            <td>Dakota Rice</td>
-                                            <td>$36,738</td>
-                                            <td>Niger</td>
-                                            <td>Oud-Turnhout</td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Minerva Hooper</td>
-                                            <td>$23,789</td>
-                                            <td>Curaçao</td>
-                                            <td>Sinaai-Waas</td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Sage Rodriguez</td>
-                                            <td>$56,142</td>
-                                            <td>Netherlands</td>
-                                            <td>Baileux</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>Philip Chaney</td>
-                                            <td>$38,735</td>
-                                            <td>Korea, South</td>
-                                            <td>Overland Park</td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>Doris Greene</td>
-                                            <td>$63,542</td>
-                                            <td>Malawi</td>
-                                            <td>Feldkirchen in Kärnten</td>
-                                        </tr>
-                                        <tr>
-                                            <td>6</td>
-                                            <td>Mason Porter</td>
-                                            <td>$78,615</td>
-                                            <td>Chile</td>
-                                            <td>Gloucester</td>
-                                        </tr>
                                     </tbody>
                                 </table>
-
+                                <div class="col-md-12 btn-toolbar">
+                                    <button type="submit" class="btn btn-info btn-fill pull-right">Edit</button>
+                                    <button type="submit" class="btn btn-danger btn-fill pull-right">Delete</button>
+                                </div>
+                                <div class="clearfix"></div>
                             </div>
                         </div>
                     </div>
@@ -244,7 +205,7 @@
             </div>
         </div>
 
-
+        <!-- Footer -->
         <footer class="footer">
             <div class="container-fluid">
                 <nav class="pull-left">
