--- a/drafts/admin_panel_dashboard.html
+++ b/drafts/admin_panel_dashboard.html
@@ -178,25 +178,19 @@
                                 <table class="table table-hover" ng-controller="tListCtrl">
                                     <thead>
                                         <th>ID</th>
-                                        <th>Name</th>
-                                        <th>Salary</th>
-                                        <th>Country</th>
-                                        <th>City</th>
+                                        <th>Report Name</th>
                                     </thead>
                                     <tbody>
                                         <tr ng-repeat="x in tList_records">
                                             <td>{{$index + 1}}</td> 
-                                            <td>{{x.name}}</td>
-                                            <td>{{x.salary}}</td>
-                                            <td>{{x.country}}</td>
-                                            <td>{{x.city}}</td>
+                                            <td>{{x.report_name}}</td>
+                                            <td class="btn-toolbar">
+                                                <button type="submit" class="btn btn-info btn-fill pull-right">Edit</button>
+                                                <button type="submit" class="btn btn-danger btn-fill pull-right">Delete</button>
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
-                                <div class="col-md-12 btn-toolbar">
-                                    <button type="submit" class="btn btn-info btn-fill pull-right">Edit</button>
-                                    <button type="submit" class="btn btn-danger btn-fill pull-right">Delete</button>
-                                </div>
                                 <div class="clearfix"></div>
                             </div>
                         </div>
